<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rootLayout"
        tools:context=".ChildNodesActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_select_a_parent_node"
            android:id="@+id/selectedParentTV"
            android:textSize="10pt"/>

        <Spinner
            android:id="@+id/parentSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_select_a_child_node_to_add"
            android:id="@+id/selectedChildTV"
            android:textSize="10pt"/>

        <Spinner
            android:id="@+id/childSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/addChildButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addChild"
            android:text="@string/add_child_to_parent" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/child_node_s_name"
                    android:textSize="8pt" />


                <TextView
                    android:id="@+id/costFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_from_parent"
                    android:textSize="8pt" />


            </LinearLayout>




        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backToMain"
            android:text="@string/previous" />


    </LinearLayout>

</ScrollView>